fix: [PIE-3273]: add max height and overflow scroll for delegate selector (#8038)
* fix: add max height and overflow scroll for delegate selector

* fix: leave previous styles

* fix: max width of tag and form input

* fix: input width for large tags

--- a/src/modules/10-common/components/DelegateSelectors/DelegateSelectors.module.scss
+++ b/src/modules/10-common/components/DelegateSelectors/DelegateSelectors.module.scss
@@ -7,7 +7,14 @@
 
 .wrapper {
   position: relative;
-  flex: 0 0 50%;
+  width: 50%;
+  max-width: 50%;
+
+  :global(.bp3-input.bp3-tag-input.bp3-multi-select) {
+    max-height: 116px !important;
+    overflow-y: scroll !important;
+    overflow-x: hidden;
+  }
 
   .loader {
     display: flex;
